kubernetes/camofox/tailscale-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: camofox-tailscale
  annotations:
    tailscale.com/tags: tag:camofox

spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: camofox
      port:
        number: 9377
  tls:
  - hosts:
    - camofox
